--- a/public/sheet.css
+++ b/public/sheet.css
@@ -14,10 +14,12 @@ video{
     border-color: black;
     margin-left: 50px;
     margin-right: 25px;
+    border-width: 10px;
+    border-color: indigo;
 }
 #container{
     position:fixed;
-    background-color: brown;
+    background-color: rgb(248, 245, 245);
     width: 1100px;
     height:640px;
 }
@@ -26,12 +28,20 @@ video{
     position: relative;
     margin-left: 1100px; 
     width: 435px;
-    height: 640px;
+    height: 540px;
     background-color: burlywood;
     overflow: auto;
 }
+#message_header{
+    position: relative;
+    margin-left: 1100px;
+    background-color: burlywood;
+    width: 435px;
+    height: 100px;
+}
+
 .btns{
-    background-color: tomato;
+    background-color: rgb(157, 71, 255);
     height: 80px;
 }
 .local_message{
@@ -41,13 +51,28 @@ video{
     height: fit-content;
     margin-left: auto;
     margin-right: 10px;
+    animation-name: round;
+    animation-iteration-count: 1;
+    animation-duration:3s ;
 }
+
 .remote_message{
     background-color:azure;
     border-radius:30px;
     margin-left: 10px;
     width: fit-content;
     height: fit-content;
+    animation-name: round;
+    animation-iteration-count: 1;
+    animation-duration:3s ;
+}
+@keyframes round{
+    0%{
+        border-radius: 0px;
+    }
+    100%{
+        border-radius: 30px;
+    }
 }
 .inner_message{
     margin-left: 20px;
@@ -129,4 +154,17 @@ video{
     margin-left:595px;
     margin-top: 6px;
     background-color:skyblue;
+}
+.setName{
+    font-size: 50px;
+    font-family: cursive;
+    font-weight: bold;
+    font-style: italic;
+    margin-left: 30px;
+    margin-top: auto;
+}
+#message_header{
+    /* text-align: center; */
+    float: left;
+    /* margin-left: 30px; */
 }
