--- a/public/sheet.css
+++ b/public/sheet.css
@@ -95,18 +95,43 @@ video{
 } */
 #v_btn{
     /* margin-top:8px; */
-    margin-left: 100px;
-    margin-right: 100px;
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 20px;
+    /* margin-right: 100px; */
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border: none;
     outline: none;
 }
+#record{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    margin-left: 210px;
+    margin-top: 20px;
+    font-size: smaller;
+}
+#stop_record{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    margin-left: 310px;
+    margin-top: 20px;
+}
 #a_btn{
     /* margin-top: 8px; */
-    margin-left: 100px;
-    margin-right: 100px;
+    position: absolute;
+    margin-left: 110px;
+    /* margin-right: 100px;  */
+    margin-top: 20px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -115,8 +140,8 @@ video{
 }
 #on_vlick{
     margin-top: 20px;
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 410px;
+    margin-right: 50px;
     /* margin-bottom: 10px; */
     width: 70px;
     height: 50px;
@@ -128,18 +153,19 @@ video{
 
 #share_screen{
     border-radius: 10px;
-    margin-left: 300px;
+    margin-left: 510px;
     margin-right: 100px;
     width: 100px;
-    height: 70px;
+    height: 50px;
     /* margin-top: -10px; */
     border: none;
     outline: none;
     position: absolute;
-    margin-top: 5px;
+    margin-top: 20px;
+    font-size: smaller;
 }
 #message{
-    margin-left: 670px;
+    margin-left: 1178px;
     width: 357px;
     position: absolute;
     height: 80px;
@@ -151,7 +177,7 @@ video{
     border-radius: 50%;
     border: none;
     outline: none;
-    margin-left:595px;
+    margin-left:1108px;
     margin-top: 6px;
     background-color:skyblue;
 }
