audio bug resolved

--- a/public/sheet.css
+++ b/public/sheet.css
@@ -194,3 +194,13 @@ video{
     float: left;
     /* margin-left: 30px; */
 }
+#remoteaudio{
+    position: absolute;
+    margin-top: 30px;
+    margin-left: 1000px;
+    height: 50px;
+    width: 100px;
+    display: block;
+    background-color: turquoise;
+    margin-top: -640px;
+}
