--- a/public/sheet.css
+++ b/public/sheet.css
@@ -1,3 +1,5 @@
+/* ALL THESE ARE ARRANGED IN ORDER SAME AS HTML ORDER */
+
 body{
     margin: 0px;
     padding: 0px;
@@ -6,22 +8,33 @@ body{
 h1{
     background-color: blue;
 }
-video{
-    width: 450px;
-    height: 640px;
-    display: inline;
-    border-width: 10px;
-    border-color: black;
-    margin-left: 50px;
-    margin-right: 25px;
-    border-width: 10px;
-    border-color: indigo;
-}
 #container{
     position:fixed;
     background-color: rgb(248, 245, 245);
-    width: 1100px;
-    height:640px;
+    width: 1020px;
+    height:720px;
+    margin-left: 80px;
+}
+video{
+    width: 420px;
+    height: 1000px;
+    display: inline;
+    border-width: 10px;
+    border-color: black;
+    margin-left: 40px;
+    margin-right: 20px;
+    margin-top: -150px;
+    border-width: 10px;
+    border-color: indigo;
+}
+#message_header{
+    position: relative;
+    margin-left: 1100px;
+    background-color:rgb(219, 235, 245);
+    width: 435px;
+    height: 100px;
+    border-radius: 30px 30px 0px 0px;
+    float: left;
 }
 #message_container
 {
@@ -29,23 +42,110 @@ video{
     margin-left: 1100px; 
     width: 435px;
     height: 540px;
-    background-color: burlywood;
+    background-color: rgb(219, 235, 245);
     overflow: auto;
-}
-#message_header{
-    position: relative;
-    margin-left: 1100px;
-    background-color: burlywood;
-    width: 435px;
-    height: 100px;
+    border-radius: 0px 0px 30px 30px;
 }
 
 .btns{
-    background-color: rgb(157, 71, 255);
-    height: 80px;
+    width: 80px;
+    display:block;
+    margin-top: -640px;
 }
+.btns_btn{
+    box-shadow: 6px 6px 10px gray ;
+    display: block;
+    margin-top: 30px;
+    margin-left: 5px;
+}
+#v_btn{
+    margin-left: 15px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+}
+#a_btn{
+    margin-left: 15px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+}
+#join{
+    width: 70px;
+    height: 50px;
+    border-radius: 20px;
+    border: none;
+    outline: none;
+}
+#share_screen{
+    border-radius: 10px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    outline: none;
+    margin-top: 20px;
+    font-size: smaller;
+    background-image: url("screen_share.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-left: 15px;
+    background-size: cover;
+}
+#record{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    font-size: smaller;
+    margin-left: 15px;
+}
+#stop_record{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    margin-left: 15px;
+}
+#remoteaudio{
+    margin-left: 15px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+}
+#message{
+    margin-left: 1100px;
+    width: 357px;
+    position: absolute;
+    height: 80px;
+    border-color: indianred;
+    margin-top: 20px;
+    border-radius: 30px;
+    outline: none;
+}
+#send_button{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    margin-left:1459px;
+    margin-top: 6px;
+    background-color:skyblue;
+    margin-top: 25px;
+}
+
+/* REST OF THESE PROPERTIES ARE CRAETED BY JAVASCRIPT */
+
 .local_message{
-    background-color:azure;
+    background-color:white;
     border-radius: 30px;
     width: fit-content;
     height: fit-content;
@@ -55,9 +155,8 @@ video{
     animation-iteration-count: 1;
     animation-duration:3s ;
 }
-
 .remote_message{
-    background-color:azure;
+    background-color:white;
     border-radius:30px;
     margin-left: 10px;
     width: fit-content;
@@ -84,103 +183,6 @@ video{
     font-style: italic;
 }
 
-/* .a_v{
-    margin-left: 40px;
-    border-radius: 50%;
-    margin-right: 40px;
-    height: 50px;
-    width: 50px;
-    border: none;
-    outline: none;
-} */
-#v_btn{
-    /* margin-top:8px; */
-    position: absolute;
-    margin-left: 10px;
-    margin-top: 20px;
-    /* margin-right: 100px; */
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-}
-#record{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-    margin-left: 210px;
-    margin-top: 20px;
-    font-size: smaller;
-}
-#stop_record{
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-    margin-left: 310px;
-    margin-top: 20px;
-}
-#a_btn{
-    /* margin-top: 8px; */
-    position: absolute;
-    margin-left: 110px;
-    /* margin-right: 100px;  */
-    margin-top: 20px;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-}
-#on_vlick{
-    margin-top: 20px;
-    margin-left: 410px;
-    margin-right: 50px;
-    /* margin-bottom: 10px; */
-    width: 70px;
-    height: 50px;
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    position: absolute;
-}
-
-#share_screen{
-    border-radius: 10px;
-    margin-left: 510px;
-    margin-right: 100px;
-    width: 100px;
-    height: 50px;
-    /* margin-top: -10px; */
-    border: none;
-    outline: none;
-    position: absolute;
-    margin-top: 20px;
-    font-size: smaller;
-}
-#message{
-    margin-left: 1178px;
-    width: 357px;
-    position: absolute;
-    height: 80px;
-    background-color: rgb(193, 240, 167);
-}
-#send_button{
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-    margin-left:1108px;
-    margin-top: 6px;
-    background-color:skyblue;
-}
 .setName{
     font-size: 50px;
     font-family: cursive;
@@ -188,19 +190,5 @@ video{
     font-style: italic;
     margin-left: 30px;
     margin-top: auto;
-}
-#message_header{
-    /* text-align: center; */
-    float: left;
-    /* margin-left: 30px; */
-}
-#remoteaudio{
-    position: absolute;
-    margin-top: 30px;
-    margin-left: 1000px;
-    height: 50px;
-    width: 100px;
-    display: block;
-    background-color: turquoise;
-    margin-top: -640px;
+    color: black;
 }
