--- a/public/sheet.css
+++ b/public/sheet.css
@@ -27,7 +27,7 @@ video{
     border-width: 10px;
     border-color: indigo;
 }
-#message_header{
+/* #message_header{
     position: relative;
     margin-left: 1100px;
     background-color:rgb(219, 235, 245);
@@ -35,13 +35,13 @@ video{
     height: 100px;
     border-radius: 30px 30px 0px 0px;
     float: left;
-}
+} */
 #message_container
 {
     position: relative;
     margin-left: 1100px; 
     width: 435px;
-    height: 540px;
+    height: 640px;
     background-color: rgb(219, 235, 245);
     overflow: auto;
     border-radius: 0px 0px 30px 30px;
@@ -51,6 +51,8 @@ video{
     width: 80px;
     display:block;
     margin-top: -640px;
+    /* background-color: blue; */
+    height: 640px;
 }
 .btns_btn{
     box-shadow: 6px 6px 10px gray ;
@@ -120,24 +122,34 @@ video{
     border: none;
     outline: none;
 }
+#clear_chats{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    margin-left: 15px;
+}
 #message{
     margin-left: 1100px;
     width: 357px;
     position: absolute;
     height: 80px;
     border-color: indianred;
-    margin-top: 20px;
+    margin-top: -30px;
     border-radius: 30px;
     outline: none;
 }
 #send_button{
+    position: absolute;
     width: 70px;
     height: 70px;
     border-radius: 50%;
     border: none;
     outline: none;
     margin-left:1459px;
-    margin-top: 6px;
+    margin-top: 260px;
+    top: 618px;
     background-color:skyblue;
     margin-top: 25px;
 }
@@ -149,7 +161,8 @@ video{
     border-radius: 30px;
     width: fit-content;
     height: fit-content;
-    margin-left: auto;
+    /* margin-left: auto; */
+    margin-left: 10px;
     margin-right: 10px;
     animation-name: round;
     animation-iteration-count: 1;
